<resources>
    <string name="app_name">Blood Hub</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="you_re_somebody_s_type">You\'re Somebody\'s Type!</string>
    <string name="request_blood_now">Request Blood Now!</string>
    <string name="continue_using_bloodhub">Continue using BloodHub</string>
    <string name="or">OR</string>
    <string name="action_register_organization">Register as a Organization</string>
    <string name="action_register_individual">Register as an Individual</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sigin in</string>
    <string name="bloodhub">BloodHub</string>
    <string name="forget_password_info">Enter your email address so that your password can be reset.</string>
    <string name="action_send_password">Send password</string>
    <string name="prompt_org_name">Institute Name</string>
    <string name="prompt_contact">Contact Number</string>
    <string name="prompt_add">Address</string>
    <string name="termsTitle">Terms and conditions</string>
    <string name="agree_terms">People registering on this application must understand that the information provided by them on the registration page is available to a person seeking for a particular blood group. We do not sell contact details of potential donors to any third party or use it in any way for commercial gains. We does not arrange for blood. We only provide relevant information about potential donors to those in need of blood. We reserve the right to inactivate member at any given time in case of wrong information given or misuse of service.</string>
    <string name="i_agree_to_share_my_details">I agree to share my details</string>
    <string name="action_register">Register</string>
    <string name="prompt_ind_name">Name</string>
    <string name="by_signing_up_you_agree_to_our">By signing up, you agree to our </string>
    <string name="terms_and_conditions_txt">Terms and Conditions.</string>
    <string name="blood_group">Blood Group</string>
    <string name="quantity_of_bags">Quantity of bag (s)</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="action_submit_request">Submit request</string>
    <string name="prompt_location">Location</string>
    <string name="available">       Available</string>
    <string name="not_available">       Not Available</string>
    <string name="transport">Transport</string>
    <string name="organization">Organization</string>
    <string name="prompt_date">Date</string>
    <string name="transport_required">Transport Required ?</string>
    <string name="yes">  Yes</string>
    <string name="no">    No</string>
    <string name="prompt_time">Time</string>
    <string name="make_blood_request">Make new blood Request</string>
    <string name="manage_request">Manage previous Requests</string>
    <string name="title_activity_main2">MainActivity_2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="main_btn">main_btn</string>
    <string name="profile">Profile</string>
    <string name="appointment">Appointment</string>
    <string name="logout">Logout</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="set">Set</string>
    <string name="appointment_info">Your appointment has been sent.</string>
    <string name="requests">Requests</string>
    <string name="confirmerd_appointments">Confirmed Appointments</string>
    <string name="confirmed_appointments">confirmed appointments</string>
    <string name="back_button">back button</string>
    <string name="back">Back</string>
    <string name="ok">Ok</string>
    <string name="request_info">You Blood request has been queued.</string>
    <string name="profile_info">"Above mentioned data is subjected to "</string>
    <string name="prompt_uid">User ID</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="request_date">Request Date</string>
</resources>