<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/bloodhubfinal" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/you_re_somebody_s_type"
        android:textColor="@color/fab1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/make_request_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:background="@drawable/button_type_1_filled"
        android:elevation="6dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/make_blood_request"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/fab1"
        android:textSize="20sp"
        android:layout_below="@+id/make_request_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/manage_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_type_1"
        android:elevation="6dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/manage_request"
        android:textColor="@color/fab1"
        android:textSize="18sp" />

</RelativeLayout>