<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="17dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="40dp"
        android:visibility="gone"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:id="@+id/linear">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/prompt_org_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/fab1"
                    android:textColorHint="@color/fab2"
                    android:backgroundTint="@color/fab1"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/fab1"
                    android:textColorHint="@color/fab2"
                    android:backgroundTint="@color/fab1"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/fab1"
                    android:textColorHint="@color/fab2"
                    android:backgroundTint="@color/fab1"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/prompt_contact"
                    android:textColor="@color/fab1"
                    android:textColorHint="@color/fab2"
                    android:backgroundTint="@color/fab1"
                    android:importantForAutofill="no"/>

                <EditText
                    android:id="@+id/add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/prompt_add"
                    android:maxLines="2"
                    android:textColor="@color/fab1"
                    android:textColorHint="@color/fab2"
                    android:backgroundTint="@color/fab1"
                    android:importantForAutofill="no"
                    android:inputType="text" />

            <Button
                android:id="@+id/textTerms"
                style="?android:textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:gravity="center"
                android:text="@string/termsTitle"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_gravity="bottom|center"
                android:textColor="@android:color/background_dark"
                android:background="@android:color/background_light"
                android:layout_marginTop="20dp"
                android:textStyle="normal|bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="8dp"
                tools:ignore="NestedScrolling">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/agree_terms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/termsAndCond"
                        android:textColorHint="@android:color/background_dark"
                        android:textColor="@android:color/background_dark" />

                </LinearLayout>

            </ScrollView>

            <CheckBox
                android:id="@+id/agree_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:gravity="start|center"
                android:text="@string/i_agree_to_share_my_details"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:buttonTint="@color/fab1"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/action_register"
                android:textAlignment="center"
                android:textSize="22sp"
                android:layout_gravity="bottom|center"
                android:textColor="@android:color/background_light"
                android:background="@drawable/button_type_1_filled"
                android:enabled="false"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>