<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/rounded_top_20"
            android:elevation="8dp"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:background="@color/transparent"
                android:contentDescription="@string/back_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textAllCaps="true"
                android:layout_centerInParent="true"
                android:padding="4dp"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/prompt_ind_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/fab1"
            android:textColorHint="@color/fab2"
            android:backgroundTint="@color/fab1"
            android:importantForAutofill="no"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/blood_group"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/blood_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:overlapAnchor="false"
                android:dropDownWidth="match_parent"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:backgroundTint="@color/fab1"
                style="@android:style/Widget.Material.Light.Spinner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/quantity_of_bags"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/quantity_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:overlapAnchor="false"
                android:dropDownWidth="match_parent"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:backgroundTint="@color/fab1"
                style="@android:style/Widget.Material.Light.Spinner" />

        </LinearLayout>

        <EditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/prompt_contact"
            android:textColor="@color/fab1"
            android:textColorHint="@color/fab2"
            android:backgroundTint="@color/fab1"
            android:importantForAutofill="no"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/prompt_location"
            android:textColor="@color/fab1"
            android:textColorHint="@color/fab2"
            android:backgroundTint="@color/fab1"
            android:importantForAutofill="no"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/diagnosis"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/diagnosis_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:overlapAnchor="false"
                android:dropDownWidth="match_parent"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:backgroundTint="@color/fab1"
                style="@android:style/Widget.Material.Light.Spinner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transport"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                />

            <RadioGroup
                android:id="@+id/transport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="4dp">

                <RadioButton
                    android:id="@+id/available"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"
                    android:text="@string/available" />

                <RadioButton
                    android:id="@+id/not_available"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/not_available"
                    android:buttonTint="@color/black"
                    android:textColor="@color/black"/>

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/request_btn"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/action_submit_request"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|center"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button_type_1_filled" />

    </LinearLayout>

</ScrollView>