<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/forgot_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_password_info"
        android:layout_margin="16dp"
        android:textAlignment="center"
        android:textColor="@color/fab1"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/fab1"
        android:backgroundTint="@color/fab1"
        android:singleLine="true"
        android:importantForAutofill="no" />

    <!-- progress -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/fab1"
        android:layout_gravity="center"
        android:elevation="1dp" />

    <Button
        android:id="@+id/password_reset_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:elevation="8dp"
        android:layout_margin="20dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/action_send_password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/fab1"
        android:background="@drawable/button_type_1" />

</LinearLayout>